refactor: Update project name and dependencies
The project name has been updated in package.json and metadata.json to reflect the new application context "videira academia avaliação 10/09".
Additionally, a new font (Teko) has been added to the application's stylesheets in index.html, and the AI Studio link in README.md has been updated.
The core application logic has been refactored to introduce user authentication and role-based dashboards (login, admin, client), moving away from the previous student-centric view. This includes changes to the main App component and type definitions.
The geminiService has been updated to handle comparative analysis prompts and include more student data fields in the AI's evaluation.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-academia-videira---analisador-de-bioimpedância",
+  "name": "videira-academia-avaliação-10/09",
   "private": true,
   "version": "0.0.0",
   "type": "module",
